<resources>
    <string name="STRING_DEFAULT_VALUE">No value</string>
    <string name="app_name">ACS-Cadastro</string>
    <string name="title_activity_add_citizen">Adicionar Ciadadão</string>
    <string name="title_activity_add_residence">Adicionar Domicílio</string>
    <string name="title_activity_add_accompany">Adicionar Acompanhamento</string>
    <string name="title_activity_add_visit">Adicionar Visita</string>
    <string name="txt_agt_remember">Lembrar dados</string>
    <string name="txt_agent_pic">Foto do agente de saúde</string>
    <string name="txt_brazil">Brasil</string>
    <string name="txt_another">Outro</string>
    <string name="txt_unknow">Não sabe</string>
    <string name="txt_default">- - -</string>
    <string name="txt_yes">Sim</string>
    <string name="txt_no">Não</string>
    <string name="txt_num_sus">Número do SUS</string>
    <string name="txt_area">Área</string>
    <string name="txt_equip">Equipe</string>
    <string name="txt_if_yes">Se sim, qual(ais)?</string>
    <string name="txt_select_date">Selecione uma data</string>
    <string name="txt_day">Dia</string>
    <string name="txt_month">Mês</string>
    <string name="txt_year">Ano</string>
    <string name="txt_ctz_data_1">Dados pessoais</string>
    <string name="txt_ctz_data_2">Informações sociodemográficas</string>
    <string name="txt_ctz_data_3">Condiçoes gerais de saúde</string>
    <string name="txt_ctz_data_4">Cidadão em situação de rua</string>
    <string name="txt_ctz_num_sus">Número do cartão do SUS</string>
    <string name="txt_ctz_name">Nome completo</string>
    <string name="txt_ctz_social_name">Nome social</string>
    <string name="txt_ctz_mother_name">Nome completo da mãe</string>
    <string name="txt_ctz_num_pis_pasep">Numero NIS (PIS/PASE)</string>
    <string name="txt_ctz_responsible">Responsável familiar</string>
    <string name="txt_ctz_birth_date">Data de nascimento</string>
    <string name="txt_ctz_gender">Sexo</string>
    <string name="txt_ctz_race">Raça/Cor</string>
    <string name="txt_ctz_nation">Nacionalidade</string>
    <string name="txt_ctz_uf_city">UF e município de nascimento</string>
    <string name="txt_ctz_phone">Telefone</string>
    <string name="txt_ctz_email">E-mail</string>
    <string name="txt_ctz_nation_birth">País de nascimento</string>
    <string name="txt_ctz_kinship">Relação de parentesco com o responsável familiar</string>
    <string name="txt_ctz_occupation">Ocupação</string>
    <string name="txt_ctz_school">Frequenta escola ou creche?</string>
    <string name="txt_ctz_education">Qual o curso mais elevado que frequenta ou frequentou?</string>
    <string name="txt_ctz_employment">Situação no mercado de trabalho</string>
    <string name="txt_ctz_kids_0_9">Crianças de 0 a 9 anos, com quem ficam?</string>
    <string name="txt_ctz_caregiver">Frequenta cuidador tradicional?</string>
    <string name="txt_ctz_community_group">Participa de algum grupo comunitário?</string>
    <string name="txt_ctz_health_plan">Possui plano de saúde privado?</string>
    <string name="txt_ctz_community_traditional">É membro de povo ou comunidade tradicional?"</string>
    <string name="txt_ctz_orientation_sexual">Deseja informar sua orientação sexual/identidade de gênero?</string>
    <string name="txt_ctz_deficiency">Tem alguma deficiência?</string>
    <string name="txt_ctz_deficiency_hearing">Auditiva</string>
    <string name="txt_ctz_deficiency_visual">Visual</string>
    <string name="txt_ctz_deficiency_intellectual">Intelectual/Cognitiva</string>
    <string name="txt_ctz_deficiency_physical">Fisica</string>
    <string name="txt_ctz_pregnant">Está gestante?</string>
    <string name="txt_ctz_pregnant_what">Se sim, qual materinadade de preferência?</string>
    <string name="txt_ctz_weight">Sobre seu peso, voce se considera</string>
    <string name="txt_ctz_smoking">Está fumante?</string>
    <string name="txt_ctz_alcohol">Faz consumo de alcóol?</string>
    <string name="txt_ctz_drugs">Faz uso de outras drogas?</string>
    <string name="txt_ctz_hypertension">Tem hipertensao arterial?</string>
    <string name="txt_ctz_diabetes">Tem diabetes?</string>
    <string name="txt_ctz_avc">Teve AVC/derrame?</string>
    <string name="txt_ctz_heart_atk">Teve infarto?</string>
    <string name="txt_ctz_leprosy">Etá com hanseniase?</string>
    <string name="txt_ctz_tuberculosis">Está com tuberculose?</string>
    <string name="txt_ctz_cancer">Tem ou teve câncer?</string>
    <string name="txt_ctz_mental_health">Fez ou faz tratamento com psquiatra
            ou teve internação por problema de saúde mental?</string>
    <string name="txt_ctz_other_practices">Usa outras práticas integrativas e complementares?</string>
    <string name="txt_ctz_is_in_bed">Está acamado?</string>
    <string name="txt_ctz_is_domiciled">Está dommiciliado?</string>
    <string name="txt_ctz_interment">Teve alguma internação nos últimos 12 meses?</string>
    <string name="txt_ctz_interment_why">Se sim, por qual causa?</string>
    <string name="txt_ctz_plants">Usa plantas medicinais?</string>
    <string name="txt_ctz_plants_what">Se sim, indique qual(ais)</string>
    <string name="txt_ctz_another_practices">Usa outras praticas integrativas e complementares?</string>
    <string name="txt_ctz_cardiac_insufficiency">Insuficiência cardiaca</string>
    <string name="txt_ctz_renal_insufficiency">Insuficiência cardiaca</string>
    <string name="txt_ctz_asthma">Asma</string>
    <string name="txt_ctz_emphysema">DEPOC/Enfisema</string>
    <string name="txt_ctz_heart_disease">Tem doença cardíaca?</string>
    <string name="txt_ctz_kidney_disease">Tem/teve problema nos rins?</string>
    <string name="txt_ctz_respiratory_disease">Tem doença respiratória?</string>
    <string name="txt_ctz_street">Está em situação de rua?</string>
    <string name="txt_ctz_street_time">Tempo em situação de rua?</string>
    <string name="txt_ctz_any_benefit">Recebe algum benefício?</string>
    <string name="txt_ctz_family">Possui referência familiar?</string>
    <string name="txt_ctz_food_per_day">Quantas vezes se alimenta ao dia?</string>
    <string name="txt_ctz_food_origin">Qual a origem da alimentação?</string>
    <string name="txt_ctz_restaurant">Restaurante popular</string>
    <string name="txt_ctz_restaurant_donation">Doação de restaurante</string>
    <string name="txt_ctz_people_donation">Doação popular</string>
    <string name="txt_ctz_religious_donation">Doação de grupo religioso</string>
    <string name="txt_ctz_another_institution">É acompanhado por outra instituição?</string>
    <string name="txt_ctz_another_institution_what">Se sim, qual(ais)?</string>
    <string name="txt_ctz_family_visit">Visita algum familiar com frequência?</string>
    <string name="txt_ctz_family_visit_what">Se sim, qual o grau de parentensco?</string>
    <string name="txt_ctz_personal_hygiene">Tem acesso a higiene pessoal?</string>
    <string name="txt_ctz_personal_hygiene_what">Se sim, indique qual(ais)?</string>
    <string name="txt_ctz_bath">Banho</string>
    <string name="txt_ctz_sanitary">Acesso ao sanitário</string>
    <string name="txt_ctz_oral">Higiene bucal</string>
    <string name="txt_rsd_data_1">Endereço</string>
    <string name="txt_rsd_data_2">Condições de moradia</string>
    <string name="txt_rsd_data_3">Famílias</string>
    <string name="txt_rsd_place_type">Tipo do logradouro</string>
    <string name="txt_rsd_place_name">Nome do logradouro</string>
    <string name="txt_rsd_number">Numero</string>
    <string name="txt_rsd_complement">Complemento</string>
    <string name="txt_rsd_neighborhood">Bairro</string>
    <string name="txt_rsd_uf_city">UF e Município</string>
    <string name="txt_rsd_cep">CEP</string>
    <string name="txt_rsd_home_phone">Telefone residencial</string>
    <string name="txt_rsd_reference_phone">Telefone de referência</string>
    <string name="txt_rsd_housing_situation">Situação de moradia/posse da terra</string>
    <string name="txt_rsd_location">Localização</string>
    <string name="txt_rsd_location_if">Em caso de produção rural: condições de posse da terra</string>
    <string name="txt_rsd_residence_type">Tipo do domicílio</string>
    <string name="txt_rsd_residents">Total de moradores</string>
    <string name="txt_rsd_rooms">Total de cômodos</string>
    <string name="txt_rsd_residence_access">Tipo de acesso ao domicílio</string>
    <string name="txt_rsd_residence_construction">Material predominante na construção das paredes
            externas de seu domicílio</string>
    <string name="txt_rsd_electric_energy">Disponibilidade de energia elétrica?</string>
    <string name="txt_rsd_water_supply">Tipo de abastecimento de água</string>
    <string name="txt_rsd_water_treatment">Tratamento de água no domicílio</string>
    <string name="txt_rsd_bathroom">Forma de escoamento do banheiro ou sanitário</string>
    <string name="txt_rsd_garbage">Destino do lixo</string>
    <string name="txt_rsd_pets">Animais no domicílio</string>
    <string name="txt_rsd_cat">Gato</string>
    <string name="txt_rsd_dog">Cachorro</string>
    <string name="txt_rsd_bird">Pássaro</string>
    <string name="txt_rsd_breeding">Criação (galinha, porco etc)</string>
    <string name="txt_rsd_pets_total">Quantos?</string>
    <string name="txt_rsd_family_record">Nº prontuário familiar</string>
    <string name="txt_rsd_resp_num_sus">Nº do SUS do responsável</string>
    <string name="txt_rsd_resp_birth_date">Data de nascimento do responsável</string>
    <string name="txt_rsd_famlily_income">Renda familiar</string>
    <string name="txt_rsd_lives_since">Reside desde </string>
    <string name="txt_rsd_n_members">Número de membros da família</string>
    <string name="txt_rsd_moved">Mudou-se?</string>
    <string name="txt_acc_data_1">Dados do accompanhamento</string>
    <string name="txt_acc_data_2">Problema / Condição avaliada</string>
    <string name="txt_acc_record">Número do prontuário</string>
    <string name="txt_acc_shift">Turno</string>
    <string name="txt_acc_nasf_polo">NASF / Polo</string>
    <string name="txt_acc_conduct">Conduta</string>
    <string name="txt_acc_forwarding">Encaminhamentos</string>
    <string name="txt_acc_observation">Ficou em Observação?</string>
    <string name="txt_acc_diagnostic">Avaliação / Diagnóstico</string>
    <string name="txt_acc_procedures">Procedimentos Clínicos / Terapêutico</string>
    <string name="txt_acc_prescription">Prescrição Terapêutica</string>
    <string name="txt_acc_scheduled_appointment">Retorno para consulta agendada</string>
    <string name="txt_acc_scheduled_care">Retorno para cuidado continuado/programado</string>
    <string name="txt_acc_scheduled_group">Agendamento para Grupos</string>
    <string name="txt_acc_scheduled_nasf">Agendamento para NASF</string>
    <string name="txt_acc_release">Alta do episódio</string>
    <string name="txt_acc_in_day">Encaminhamento Interno no Dia</string>
    <string name="txt_acc_specialized">Encaminhamento para Serviço Especializado</string>
    <string name="txt_acc_caps">Encaminhamento para CAPS</string>
    <string name="txt_acc_hospitalization">Retorno para cuidado continuado/programado</string>
    <string name="txt_acc_urgency">Encaminhamento para Urgência</string>
    <string name="txt_acc_home_care_service">Encaminhamento para Serviço de Atenção Domiciliar</string>
    <string name="txt_acc_intersectoral">Encaminhamento Intersetorial</string>
    <string name="txt_vst_shared">Visita compartilhada com outro profissional</string>
    <string name="menu_citizen">Cidadão</string>
    <string name="menu_residence">Residência</string>
    <string name="menu_accompany">Acompanhamento</string>
    <string name="menu_visit">Visita</string>
    <string name="menu_update_system">Atualizar o sistema</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancelar</string>
</resources>