<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/minimum_gap">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:text="@string/txt_acc_observation"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/rgrp_acc_observation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="0.4"
                android:gravity="right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rgrp_acc_observation_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/txt_yes" />

                <RadioButton
                    android:id="@+id/rgrp_acc_observation_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:checked="false"
                    android:text="@string/txt_no" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/minimum_gap">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_acc_nasf_polo"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chb_acc_evaluation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_diagnostic" />

                <CheckBox
                    android:id="@+id/chb_acc_procedures"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_procedures" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/minimum_gap">

                <CheckBox
                    android:id="@+id/chb_acc_prescription"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_prescription" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/minimum_gap">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_acc_conduct"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/minimum_gap">

                <CheckBox
                    android:id="@+id/chb_acc_scheduled_appointment"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_scheduled_appointment" />

                <CheckBox
                    android:id="@+id/chb_acc_scheduled_care"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_scheduled_care" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/minimum_gap">

                <CheckBox
                    android:id="@+id/chb_acc_scheduled_group"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_scheduled_group" />

                <CheckBox
                    android:id="@+id/chb_acc_scheduled_nasf"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_scheduled_nasf" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/minimum_gap">

                <CheckBox
                    android:id="@+id/chb_acc_release"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_release" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/minimum_gap">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_acc_forwarding"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chb_acc_in_day"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_in_day" />

                <CheckBox
                    android:id="@+id/chb_acc_specialized"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_specialized" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chb_acc_caps"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_caps" />

                <CheckBox
                    android:id="@+id/chb_acc_hospitalization"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_hospitalization" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chb_acc_urgency"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_urgency" />

                <CheckBox
                    android:id="@+id/chb_acc_home_care_service"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_home_care_service" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chb_acc_intersectoral"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_acc_intersectoral" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>