<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.CalendarActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/minimum_gap"
    android:background="@drawable/border_dark">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/minimum_gap"
        android:paddingBottom="@dimen/minimum_gap">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_select_date" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_day"
            android:layout_weight="0.3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_month"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_year"
            android:layout_weight="0.4" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/npkr_day"
            android:layout_weight="0.3"
            android:orientation="horizontal" />

        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/npkr_month"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/minimum_gap"
            android:paddingRight="@dimen/minimum_gap" />

        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/npkr_year"
            android:layout_weight="0.4"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok"
            android:id="@+id/btn_calendar_ok"
            android:layout_weight=".5"
            style="@style/Widget.AppCompat.Button.Colored" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:id="@+id/btn_calendar_cancel"
            android:layout_weight=".5"
            style="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>

</LinearLayout>
